2005-02-14  Chris Kelly <ckdake@users.sf.net> 1.5-RC1

	* v1.5 Release Candidate 1

2005-02-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b346

	* Change: Remove link/image border from new menu icons

2005-02-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b345

	* Typo

2005-02-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b344

	* Fix 1079796: Rebuild thumbnails reloads wrong page

2005-02-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b343

	* Fix 1082661: New user email not being sent

2005-02-11  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b342

        * Fix: Incorrectly aligned parens render the do_command XSS fix
          useless

2005-02-10  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b341

    * Text: Typo in config wizard

2005-02-10  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b340

    * Fix 1103572: Exclude ppmquant from using '--quiet', which 
      it doesn't like.

    * Fix 1099659: Add exiftags support for autorotate

2005-02-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b339

    * Fix: css in a form in albums.php

    * Fix: no class "admin" for admibox in view_album.php

    * Fix: docs link in config was broken

    * Fix: Adjust skins:
	- butterfly_green
	- suit
	- yellow

2005-02-03  Bharat Mediratta  <bharat@menalto.com> 1.5-cvs-b338

    * Added multisite support for caching albums.php.  You can now create a
      file called cache-domain.com.html and it will use that instead of
      cache.html.

2005-02-01  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b337

    * Change: removed unnecessary css definition in add_photos.php

    * Fix: css classed in watermark_album.php

    * Change: Removed unnecessary use of css classes and code indents in:
	- includes/add_photos/add_admin.inc
	- includes/add_photos/add_form.inc
	- includes/add_photos/add_other.inc
	
    * Fix: madmod1 skin was broken

    * Fix: Adjust madmod1 skin
