@@ -1,3 +1,9 @@
+2005-02-15  Chris Kelly <ckdake@users.sf.net> 1.5-RC1-cvs-b1
+
+	* Fix: backup_albums.php was not globalized
+
+	* Text: Add the [] around the stats links for readability
+
 2005-02-14  Chris Kelly <ckdake@users.sf.net> 1.5-RC1
 
 	* v1.5 Release Candidate 1
